@@ -8,13 +8,13 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContext;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
 
 @Component
@@ -52,7 +52,7 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
                         new UsernamePasswordAuthenticationToken(
                                 user.getLoginId(),
                                 null,
-                                List.of(new SimpleGrantedAuthority(getRole(user.getGubun())))
+                                Collections.emptyList()
                         );
 
                 SecurityContext context = SecurityContextHolder.createEmptyContext();
@@ -78,9 +78,5 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
         }
 
         return bearerToken.substring(BEARER_PREFIX.length());
-    }
-
-    private String getRole(Integer gubun) {
-        return Integer.valueOf(1).equals(gubun) ? "ROLE_ADMIN" : "ROLE_USER";
     }
 }
